# Notes.CC

./: .gitignore  INSTALL.md  Makefile  Makefile.am  README.md  configure.ac  notescc.cc  notesccrc
data/: librhash.suppressions
doc/: notes.autocomplete  notescc-manpage.markdown
include/: Colors.h  Filter.h  IDStorage.h  Note.h  Project.h  Settings.h  TableView.h  settings.h
src/: Colors.cc  Filter.cc  IDStorage.cc  Note.cc  Project.cc  Settings.cc  TableView.cc  main.cc  notescc.cc  settings.cc
